grammer.bnf
//link to github https://github.com/MattP34/ProgrammingLanguages

program ::= statement*

statement ::= expression ";"
            | instantiation ";"
            | func_declaration ";"
            | control_statement
            | block ";"
            | return_statement ";"

expression ::= primary
             | operator_list "(" expression_list ")"
             | unary_operator "(" expression ")"
             | func_call

primary ::= variable | literal

expression_list ::= expression ("," + expression_list)?
                    |

instantiation ::= expression "->" IDENTIFIER

func_declaration ::= "func" INDENTIFIER "(" parameter_list ")" block

control_statement ::= while_loop
                    | if_statement

while_loop ::= "while" "(" expression ")" block

if_statement ::= "if" "(" expression ")" block (elif_statement | else_statement)?

elif_statement ::= "elif" "(" expression ")" block (elif_statement | else_statement)?

else_statement ::= "else" block

block ::= "{" statement* "}"

return_statement ::= "return" expression_list

parameter_list ::= INDENTIFIER + ("," + parameter_list)?

variable ::= INDENTIFIER ("_" variable)?

array_access ::= variable ("[" expression "]")+

operator_list ::= variadic_operator (INTEGER? "$" operator_list)?

variadic_operator ::= comparator | math_operator | boolean_operator | array_creation

array_creation ::= "[" "]"

comparator ::=  ">" | "<" | ">=" | "<=" | "=="

math_operator ::= "+" | "-" | "*" | "/" | "**"

boolean_operator ::= "||" | "&&"

unary_operator ::= "!" | "=" | "-"

func_call ::= IDENTIFIER "(" expression_list ")"

literal ::= BOOLEAN
          | INTEGER
          | FLOAT
          | CHARACTER
          | STRING
